Fixed compass script, fixed collapsing menu on desktop

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -15,3 +15,8 @@ body{
 .well{
   @extend .container;
 }
+
+.navbar-nav {
+    margin: 0;
+    padding: 0 15px;
+}
